some comments added

--- a/chess_game/index.html
+++ b/chess_game/index.html
@@ -6,8 +6,11 @@
   <link rel="stylesheet" href="Styles/index.css">
   <title>Chess Game</title>
 </head>
+<!-- Cuerpo del documento donde se coloca el contenido visible -->
 <body>
+  <!-- Contenedor principal donde se renderizará el tablero de ajedrez y otros elementos del juego -->
   <div id="root"></div>
+  <!-- Enlaza el archivo JavaScript principal y lo define como un módulo ES6 -->
   <script type="module" src="index.js">
   </script>
 </body>
