--- a/frontend/service/home.html
+++ b/frontend/service/home.html
@@ -157,7 +157,27 @@
                 </div>
             </div>
         </main>
-    </div>
+        <!-- modal -->
+        <div class="modal fade" id="wait-game" tabindex="-1" aria-labelledby="waitGameLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="waitGameLabel">Waiting for Friend</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <p id="modal-text"></p>
+                        <div class="progress mt-3 position-relative" style="height: 30px;">
+                            <div id="progress-bar" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                            <span id="timer" class="position-absolute top-50 start-50 translate-middle"></span>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     <script src="neon.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -295,7 +315,26 @@
         
         startGameWithFriendButton.addEventListener('click', () => {
             if (selectedFriend) {
-                alert(`Starting game with ${selectedFriend.name}`);
+                const modal = new bootstrap.Modal(document.getElementById('wait-game'));
+                const modalText = document.getElementById('modal-text');
+                modalText.innerHTML = `Waiting for ${selectedFriend.name} to accept the game...`;
+                modal.show();
+
+            const progressBar = document.getElementById('progress-bar');
+            let progress = 100;
+            const timer = document.getElementById('timer');
+            const interval = setInterval(() => {
+                let time = Math.floor(-progress / 100 * 30);
+                progress -= 1;
+                progressBar.style.width = `${progress}%`;
+                progressBar.setAttribute('aria-valuenow', progress);
+                timer.textContent = `${time}s`;
+                if (progress <= 0) {
+                    clearInterval(interval);
+                    modal.hide();
+                }
+            }, 300); // 300ms interval for 30 seconds total  
+                
             }
         });
 
