restyled modals, added a progress bar

--- a/frontend/service/singup.html
+++ b/frontend/service/singup.html
@@ -71,15 +71,15 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">Email already registered</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <h5 class="modal-title ctm-text-title" id="exampleModalLabel">Email already registered</h5>
+          <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
         </div>
         <div class="modal-body">
           You already have an account?
             <a href="login.html" class="ctm-text-light ctm-link">Log in</a>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Got it!</button>
+          <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Got it!</button>
 <!--           <button type="button" class="btn btn-primary">Save changes</button>
  -->        </div>
       </div>
