--- a/frontend/service/login.html
+++ b/frontend/service/login.html
@@ -52,14 +52,14 @@
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title" id="exampleModalLabel">User does not exist</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
         </div>
         <div class="modal-body">
           You don't have an account?
             <a href="singup.html" class="ctm-text-light ctm-link">Sign up</a>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Got it!</button>
+          <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Got it!</button>
        </div>
       </div>
     </div>
