working in the game invitation on chat

--- a/frontend/service/chat/index.html
+++ b/frontend/service/chat/index.html
@@ -48,6 +48,7 @@
                     <span id="current-chat-name"></span>
                 </div>
                 <div id="chat-messages" class="p-3 scroll-card">
+                    <div class="game-invitation"></div>
                 </div>
                 <form id="chat-form" class="p-2 border-top">
                     <div class="input-group">
