--- a/frontend/service/chat/test.html
+++ b/frontend/service/chat/test.html
@@ -117,7 +117,7 @@
 			console.log('Invitation declined');
 		});
 	
-		startInvitationTimer('John Doe');
+		startInvitationTimer('jariza-o');
 	});
 	</script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
