still having error 400

--- a/frontend/service/login.html
+++ b/frontend/service/login.html
@@ -21,7 +21,7 @@
     <div class="ctm-card">
       <div class="w-75"> <!-- this is encapsulating all the form, so width is not too much -->
         <h2 class="text-center ctm-text-title">Log in</h2>
-        <form id="loginForm"> <!-- currently Im not using this id -->
+        <form id="login-form"> <!-- currently Im not using this id -->
           <div class="mb-3">
             <label for="user" class="form-label ctm-text-light">User</label>
             <input type="text" class="form-control ctm-text-dark" id="username">
