--- a/frontend/service/home.html
+++ b/frontend/service/home.html
@@ -180,6 +180,7 @@
         </div>
 
     <script src="neon.js"></script>
+    <script src="auth.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
     document.addEventListener('DOMContentLoaded', () => {
@@ -354,8 +355,7 @@
         const logoutButton = document.getElementById('logout-btn');
 
         logoutButton.addEventListener('click', () => {
-        //    localStorage.removeItem('authToken');
-            window.location.href = './index.html';
+            logout();
         });
 
         // backToOptionsButton.addEventListener('click', () => {
