--- a/frontend/service/register.html
+++ b/frontend/service/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Log in</title>
+    <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -16,35 +16,36 @@
       <a class="nav-link ctm-link" href="index.html">Home</a>
     </div>
   </nav>
-  <!-- login card -->
+  <!-- registration card -->
   <main class="container mt-5 blinking-neon-frame">
     <div class="ctm-card">
       <div class="w-75"> <!-- this is encapsulating all the form, so width is not too much -->
-        <h2 class="text-center ctm-text-title">Log in</h2>
-        <form id="login-form"> <!-- currently Im not using this id -->
+        <h2 class="text-center ctm-text-title">Register</h2>
+        <form id="register-form"> <!-- currently Im not using this id -->
           <div class="mb-3">
-            <label for="user" class="form-label ctm-text-light">User</label>
-            <input type="text" class="form-control ctm-text-dark" id="username">
+            <label for="username" class="form-label ctm-text-light">Username</label>
+            <input type="text" class="form-control ctm-text-dark" id="username" required>
           </div>
           <div class="mb-3">
-            <label for="exampleInputPassword1" class="form-label ctm-text-light">Password</label>
-            <input type="password" class="form-control ctm-text-dark" id="password">
+            <label for="email" class="form-label ctm-text-light">Email</label>
+            <input type="email" class="form-control ctm-text-dark" id="email" required>
           </div>
-          <div class="mb-3 form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label ctm-text-light" for="exampleCheck1">Remember me</label>
+          <div class="mb-3">
+            <label for="password" class="form-label ctm-text-light">Password</label>
+            <input type="password" class="form-control ctm-text-dark" id="password" required>
+          </div>
+          <div class="mb-3">
+            <label for="confirm-password" class="form-label ctm-text-light">Confirm Password</label>
+            <input type="password" class="form-control ctm-text-dark" id="confirm-password" required>
           </div>
           <div class="d-flex justify-content-center">
-            <button type="submit" class="btn ctm-btn" id="submit">Submit</button>
+            <button type="submit" class="btn ctm-btn" id="submit">Register</button>
             <div class="text-center ctm-text-light p-1">or</div>
-            <button type="submit" class="btn ctm-btn">Login with 42</button>
+            <button type="submit" class="btn ctm-btn">Register with 42</button>
           </div>
         </form>
         <div class="d-flex justify-content-center mt-3">
-          <a href="#" class="ctm-text-light ctm-link">Forgot your password?</a>
-        </div>
-        <div class="d-flex justify-content-center mt-2">
-          <a href="register.html" class="ctm-text-light ctm-link">Don't have an account? Register here</a>
+          <a href="login.html" class="ctm-text-light ctm-link">Already have an account? Log in</a>
         </div>
       </div>  <!-- this closes w-75 -->
     </div> <!-- this closes the card -->
@@ -54,12 +55,11 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">User does not exist</h5>
+          <h5 class="modal-title" id="exampleModalLabel">Registration Error</h5>
           <button type="button" class="close-modal" data-bs-dismiss="modal" aria-label="Close">x</button>
         </div>
         <div class="modal-body">
-          You don't have an account?
-            <a href="register.html" class="ctm-text-light ctm-link">Sign up</a>
+          There was an issue with your registration.
         </div>
         <div class="modal-footer">
           <button type="button" class="btn ctm-btn" data-bs-dismiss="modal">Got it!</button>
@@ -68,8 +68,7 @@
     </div>
   </div>
     <script src="neon.js"></script>
-    <script src="auth.js"></script>
-    <script src="login.js"></script>
+    <script src="register.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
