working on the profile page

--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -24,7 +24,7 @@
 		<div class="d-flex ms-auto align-items-center">
 			<a class="nav-link ctm-link" href="login.html">Log in</a>
 			<span class="divider mx-2 ctm-text-light">|</span>
-			<a class="nav-link ctm-link" href="singup.html">Sign up</a>
+			<a class="nav-link ctm-link" href="register.html">Sign up</a>
         </div>
     </nav>
 	<main class="cont d-flex flex-column align-items-center">
