--- a/frontend/service/login.html
+++ b/frontend/service/login.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Log in</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,10 +29,10 @@
             <label for="exampleInputPassword1" class="form-label ctm-text-light">Password</label>
             <input type="password" class="form-control ctm-text-dark" id="password">
           </div>
-          <div class="mb-3 form-check">
+<!--           <div class="mb-3 form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label ctm-text-light" for="exampleCheck1">Remember me</label>
-          </div>
+          </div> -->
           <div class="d-flex justify-content-center">
             <button type="submit" class="btn ctm-btn" id="submit">Submit</button>
             <div class="text-center ctm-text-light p-1">or</div>
