--- a/frontend/service/profile.html
+++ b/frontend/service/profile.html
@@ -6,6 +6,35 @@
     <title>Profile</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
     <link rel="stylesheet" href="style.css">
+    <style>
+        .profile-picture-container {
+            position: relative;
+            display: inline-block;
+
+        }
+
+        #change-picture {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            display: block; /* Always show the button */
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+			display: none;
+        }
+
+        .profile-picture-container:hover #change-picture {
+            display: block;
+        }
+
+		.profile-picture {
+			border-radius: 50%;
+		}
+    </style>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ctm-navbar p-1">
@@ -20,14 +49,18 @@
             <h2 class="text-center ctm-text-title">My profile</h2>
             <div class="d-flex justify-content-center">
                 <div class="d-flex flex-column align-items-center">
-                    <img src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" alt="profile picture" class="profile-picture mb-2">
+                    <div class="profile-picture-container mb-2">
+                        <img id="profile-picture" src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" alt="profile picture" class="profile-picture">
+                        <input type="file" id="file-input" accept="image/*" style="display: none;">
+                        <button id="change-picture" class="btn ctm-btn">Change profile picture</button>
+                    </div>
                     <h3 id="username" class="ctm-text-light"></h3>
                     <h5 id="registration" class="ctm-text-light"></h5>
                     <h5 id="total-friends" class="ctm-text-light"></h5>
                     <h5 id="total-matches" class="ctm-text-light"></h5>
                     <div class="mt-2">
                         <button id="edit-profile" class="btn ctm-btn">Edit profile</button>
-                        <button id="save-changes" class="btn ctm-btn d-none">Save changes</button>
+                        <button id="save-changes" class="btn ctm-btn" style="display: none;">Save changes</button>
                     </div>
                 </div>
             </div>
@@ -39,7 +72,8 @@
             username: 'erivero-',
             registration: '3/11/24',
             totalFriends: 3,
-            totalMatches: 42
+            totalMatches: 42,
+            profilePicture: 'https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png'
         };
 
         const elements = {
@@ -49,7 +83,10 @@
             totalMatches: document.getElementById('total-matches'),
             editProfile: document.getElementById('edit-profile'),
             saveChanges: document.getElementById('save-changes'),
-            profileCard: document.getElementById('profile-card')
+            profileCard: document.getElementById('profile-card'),
+            profilePicture: document.getElementById('profile-picture'),
+            fileInput: document.getElementById('file-input'),
+            changePicture: document.getElementById('change-picture')
         };
 
         function renderUserData() {
@@ -57,11 +94,13 @@
             elements.registration.textContent = `Registered on: ${user.registration}`;
             elements.totalFriends.textContent = `Friends: ${user.totalFriends}`;
             elements.totalMatches.textContent = `Total matches: ${user.totalMatches}`;
+            elements.profilePicture.src = user.profilePicture;
         }
 
         function toggleEditMode(isEditing) {
-            elements.editProfile.classList.toggle('d-none', isEditing);
-            elements.saveChanges.classList.toggle('d-none', !isEditing);
+            elements.editProfile.style.display = isEditing ? 'none' : 'block';
+            elements.saveChanges.style.display = isEditing ? 'block' : 'none';
+             elements.changePicture.style.display = isEditing ? 'block' : 'none';
             
             if (isEditing) {
                 elements.username.innerHTML = `
@@ -85,6 +124,22 @@
         elements.saveChanges.addEventListener('click', () => {
             user.username = elements.username.querySelector('input').value;
             toggleEditMode(false);
+        });
+
+        elements.changePicture.addEventListener('click', () => {
+            elements.fileInput.click();
+        });
+
+        elements.fileInput.addEventListener('change', (event) => {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    user.profilePicture = e.target.result;
+                    elements.profilePicture.src = user.profilePicture;
+                };
+                reader.readAsDataURL(file);
+            }
         });
 
         renderUserData();
