--- a/frontend/service/profile.html
+++ b/frontend/service/profile.html
@@ -10,7 +10,6 @@
         .profile-picture-container {
             position: relative;
             display: inline-block;
-
         }
 
         #change-picture {
@@ -18,22 +17,27 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            display: block; /* Always show the button */
+            display: block;
             background-color: rgba(0, 0, 0, 0.5);
+            height: 500px;
+            width: 500px;
+            border-radius: 50%;
             color: white;
             border: none;
             padding: 5px 10px;
-            border-radius: 5px;
-			display: none;
+            display: none;
         }
 
         .profile-picture-container:hover #change-picture {
             display: block;
         }
 
-		.profile-picture {
-			border-radius: 50%;
-		}
+        .profile-picture {
+            border-radius: 50%;
+            height: 500px;
+            width: 500px;
+            object-fit: cover;
+        }
     </style>
 </head>
 <body>
@@ -44,15 +48,14 @@
         </div>
     </nav>
 
-    <main class="container mt-5 blinking-neon-frame">
+    <main id="profile-section" class="container mt-5 blinking-neon-frame">
         <div id="profile-card" class="ctm-card position-relative">
             <h2 class="text-center ctm-text-title">My profile</h2>
             <div class="d-flex justify-content-center">
                 <div class="d-flex flex-column align-items-center">
                     <div class="profile-picture-container mb-2">
-                        <img id="profile-picture" src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" alt="profile picture" class="profile-picture">
-                        <input type="file" id="file-input" accept="image/*" style="display: none;">
-                        <button id="change-picture" class="btn ctm-btn">Change profile picture</button>
+                        <img id="profile-picture" src=https://avatars.githubusercontent.com/u/131959167?v=4" alt="profile picture" class="profile-picture">
+                        <button id="change-picture" class="btn ctm-btn">Change</button>
                     </div>
                     <h3 id="username" class="ctm-text-light"></h3>
                     <h5 id="registration" class="ctm-text-light"></h5>
@@ -67,13 +70,62 @@
         </div>
     </main>
 
+    <main id="customize-section" class="container mt-5 blinking-neon-frame" style="display: none;">
+        <div id="customize-photo" class="ctm-card position-relative">
+            <h2 class="text-center ctm-text-title">Customize profile photo</h2>
+            <div class="d-flex justify-content-center">
+                <div class="d-flex flex-column align-items-center">
+                    <div class="profile-picture-container mb-2">
+                        <div id="carouselExample" class="carousel slide">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="/placeholder.svg?height=500&width=500" class="d-block profile-picture" alt="Avatar 1">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/placeholder.svg?height=500&width=500" class="d-block profile-picture" alt="Avatar 2">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="/placeholder.svg?height=500&width=500" class="d-block profile-picture" alt="Avatar 3">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                            <div class="ctm-text-light text-center">slide to change style</div>
+                        </div>
+                        <div class="container d-flex justify-content-center m-3">
+                            <button id="change-avatar-color" class="btn ctm-btn me-2">Change Avatar Color</button>
+                            <input type="color" id="avatar-color-picker" style="display: none;">
+                            <button id="change-background-color" class="btn ctm-btn">Change Background</button>
+                            <input type="color" id="background-color-picker" style="display: none;">
+                        </div>
+                    </div>
+                    <div class="d-flex m-2">
+                        <div class="ctm-text-light">or upload your own image</div>
+                        <button id="upload-image" class="ctm-btn ms-2">Upload</button>
+                        <input type="file" id="file-input" accept="image/*" style="display: none;">
+                    </div>
+                    <div class="mt-2">
+                        <button id="save-custom-photo" class="btn ctm-btn">Save changes</button>
+                        <button id="cancel-custom-photo" class="btn ctm-btn ms-2">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
+
     <script>
         const user = {
             username: 'erivero-',
             registration: '3/11/24',
             totalFriends: 3,
             totalMatches: 42,
-            profilePicture: 'https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png'
+            profilePicture: 'https://avatars.githubusercontent.com/u/131959167?v=4'
         };
 
         const elements = {
@@ -86,7 +138,16 @@
             profileCard: document.getElementById('profile-card'),
             profilePicture: document.getElementById('profile-picture'),
             fileInput: document.getElementById('file-input'),
-            changePicture: document.getElementById('change-picture')
+            changePicture: document.getElementById('change-picture'),
+            profileSection: document.getElementById('profile-section'),
+            customizeSection: document.getElementById('customize-section'),
+            uploadImage: document.getElementById('upload-image'),
+            saveCustomPhoto: document.getElementById('save-custom-photo'),
+            cancelCustomPhoto: document.getElementById('cancel-custom-photo'),
+            avatarColorButton: document.getElementById('change-avatar-color'),
+            avatarColorPicker: document.getElementById('avatar-color-picker'),
+            backgroundColorButton: document.getElementById('change-background-color'),
+            backgroundColorPicker: document.getElementById('background-color-picker')
         };
 
         function renderUserData() {
@@ -100,7 +161,7 @@
         function toggleEditMode(isEditing) {
             elements.editProfile.style.display = isEditing ? 'none' : 'block';
             elements.saveChanges.style.display = isEditing ? 'block' : 'none';
-             elements.changePicture.style.display = isEditing ? 'block' : 'none';
+            elements.changePicture.style.display = isEditing ? 'block' : 'none';
             
             if (isEditing) {
                 elements.username.innerHTML = `
@@ -127,6 +188,11 @@
         });
 
         elements.changePicture.addEventListener('click', () => {
+            elements.profileSection.style.display = 'none';
+            elements.customizeSection.style.display = 'block';
+        });
+
+        elements.uploadImage.addEventListener('click', () => {
             elements.fileInput.click();
         });
 
@@ -135,16 +201,48 @@
             if (file) {
                 const reader = new FileReader();
                 reader.onload = (e) => {
-                    user.profilePicture = e.target.result;
-                    elements.profilePicture.src = user.profilePicture;
+                    const img = document.querySelector('.carousel-item.active img');
+                    img.src = e.target.result;
                 };
                 reader.readAsDataURL(file);
             }
         });
 
+        elements.saveCustomPhoto.addEventListener('click', () => {
+            const selectedAvatar = document.querySelector('.carousel-item.active img');
+            user.profilePicture = selectedAvatar.src;
+            elements.profilePicture.src = user.profilePicture;
+            elements.profileSection.style.display = 'block';
+            elements.customizeSection.style.display = 'none';
+        });
+
+        elements.cancelCustomPhoto.addEventListener('click', () => {
+            elements.profileSection.style.display = 'block';
+            elements.customizeSection.style.display = 'none';
+        });
+
+        elements.avatarColorButton.addEventListener('click', () => {
+            elements.avatarColorPicker.click();
+        });
+
+        elements.avatarColorPicker.addEventListener('change', (event) => {
+            const selectedColor = event.target.value;
+            document.querySelectorAll('.profile-picture').forEach(img => {
+                img.style.backgroundColor = selectedColor;
+            });
+        });
+
+        elements.backgroundColorButton.addEventListener('click', () => {
+            elements.backgroundColorPicker.click();
+        });
+
+        elements.backgroundColorPicker.addEventListener('change', (event) => {
+            const selectedColor = event.target.value;
+            document.body.style.backgroundColor = selectedColor;
+        });
+
         renderUserData();
     </script>
-
     <script src="neon.js"></script>
     <script src="login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
