--- a/frontend/service/profile.html
+++ b/frontend/service/profile.html
@@ -68,54 +68,55 @@
                 </div>
             </div>
         </div>
-        <main id="customize-section" class="container mt-5 blinking-neon-frame" style="display: none;">
-            <div id="customize-photo" class="ctm-card position-relative">
-                <h2 class="text-center ctm-text-title">Customize profile photo</h2>
-                <div class="d-flex justify-content-center">
-                    <div class="d-flex flex-column align-items-center">
-                        <div class="profile-picture-container mb-2">
-                            <div id="carouselExample" class="carousel slide">
-                                <div class="carousel-inner">
-                                    <div class="carousel-item active">
-                                        <canvas id="avatarCanvas1" class="d-block profile-picture" alt="Avatar 1"></canvas>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <canvas id="avatarCanvas2" class="d-block profile-picture" alt="Avatar 2"></canvas>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <canvas id="avatarCanvas3" class="d-block profile-picture" alt="Avatar 3"></canvas>
-                                    </div>
+    </main>
+
+    <main id="customize-section" class="container mt-5 blinking-neon-frame" style="display: none;">
+        <div id="customize-photo" class="ctm-card position-relative">
+            <h2 class="text-center ctm-text-title">Customize profile photo</h2>
+            <div class="d-flex justify-content-center">
+                <div class="d-flex flex-column align-items-center">
+                    <div class="profile-picture-container mb-2">
+                        <div id="carouselExample" class="carousel slide">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <canvas id="avatarCanvas1" class="d-block profile-picture" alt="Avatar 1"></canvas>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Previous</span>
-                                </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Next</span>
-                                </button>
-                                <div class="ctm-text-light text-center">slide to change style</div>
+                                <div class="carousel-item">
+                                    <canvas id="avatarCanvas2" class="d-block profile-picture" alt="Avatar 2"></canvas>
+                                </div>
+                                <div class="carousel-item">
+                                    <canvas id="avatarCanvas3" class="d-block profile-picture" alt="Avatar 3"></canvas>
+                                </div>
                             </div>
-                            <div class="container d-flex justify-content-center m-3">
-                                <button id="change-avatar-color" class="btn ctm-btn me-2">Change Avatar Color</button>
-                                <input type="color" id="avatar-color-picker" style="display: none;">
-                                <button id="change-background-color" class="btn ctm-btn">Change Background</button>
-                                <input type="color" id="background-color-picker" style="display: none;">
-                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                            <div class="ctm-text-light text-center">slide to change style</div>
                         </div>
-                        <div class="d-flex m-2">
-                            <div class="ctm-text-light">or upload your own image</div>
-                            <button id="upload-image" class="ctm-btn ms-2">Upload</button>
-                            <input type="file" id="file-input" accept="image/*" style="display: none;">
+                        <div class="container d-flex justify-content-center m-3">
+                            <button id="change-avatar-color" class="btn ctm-btn me-2">Change Avatar Color</button>
+                            <input type="color" id="avatar-color-picker" style="display: none;">
+                            <button id="change-background-color" class="btn ctm-btn">Change Background</button>
+                            <input type="color" id="background-color-picker" style="display: none;">
                         </div>
-                        <div class="mt-2">
-                            <button id="save-custom-photo" class="btn ctm-btn">Save changes</button>
-                            <button id="cancel-custom-photo" class="btn ctm-btn ms-2">Cancel</button>
-                        </div>
+                    </div>
+                    <div class="d-flex m-2">
+                        <div class="ctm-text-light">or upload your own image</div>
+                        <button id="upload-image" class="ctm-btn ms-2">Upload</button>
+                        <input type="file" id="file-input" accept="image/*" style="display: none;">
+                    </div>
+                    <div class="mt-2">
+                        <button id="save-custom-photo" class="btn ctm-btn">Save changes</button>
+                        <button id="cancel-custom-photo" class="btn ctm-btn ms-2">Cancel</button>
                     </div>
                 </div>
             </div>
-        </main>
+        </div>
     </main>
 
 
@@ -151,9 +152,9 @@
         };
 
         const avatarImages = [
-            './resources/avatar/pngtree-man-avatar-isolated-on-white-background-png-image_4891418.png',
-            'https://png.pngtree.com/png-vector/20220608/ourmid/pngtree-man-avatar-isolated-on-white-background-png-image_4891418.png',
-            'https://png.pngtree.com/png-vector/20220608/ourmid/pngtree-man-avatar-isolated-on-white-background-png-image_4891418.png',
+            './resources/avatar/avatar_1.png',
+            './resources/avatar/avatar_2.png',
+            './resources/avatar/avatar_3.png',
         ];
 
         function renderUserData() {
@@ -206,16 +207,16 @@
             const context = canvas.getContext('2d');
             const imageData = context.getImageData(0, 0, canvas.width, canvas.height);
             const data = imageData.data;
-
+        
             for (let i = 0; i < data.length; i += 4) {
-                // Check if the pixel is not transparent and not white
-                if (data[i + 3] !== 0 && !(data[i] > 200 && data[i + 1] > 200 && data[i + 2] > 200)) {
+                // Check if the pixel is not transparent
+                if (data[i + 3] !== 0) {
                     data[i] = parseInt(color.slice(1, 3), 16);     // Red
                     data[i + 1] = parseInt(color.slice(3, 5), 16); // Green
                     data[i + 2] = parseInt(color.slice(5, 7), 16); // Blue
                 }
             }
-
+        
             context.putImageData(imageData, 0, 0);
         }
 
@@ -297,7 +298,6 @@
         };
     </script>
     <script src="neon.js"></script>
-    <script src="login.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
