--- a/frontend/service/home.html
+++ b/frontend/service/home.html
@@ -180,8 +180,8 @@
                 </div>
             </div>
         </div>
-        <div id="chat-inport"></div>
-    <script src="neon.js"></script>
+        <div id="chat-container" class="card shadow"></div>></div>
+            <script src="neon.js"></script>
 <!--     <script src="auth.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
