reorg on folders

--- a/frontend/service/play_w_friend.html
+++ b/frontend/service/play_w_friend.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -76,7 +76,7 @@
     </style>     
 </head>
 <body>
-    <!-- navbar -->
+    
     <nav class="navbar navbar-expand-lg navbar-dark ctm-navbar">
         <div class="container-fluid">
             <button id="sidebarToggle" class="toggle-btn me-2">
@@ -88,7 +88,7 @@
             </div>
         </div>
     </nav>
-    <!-- sidebar -->
+   
     <div id="sidebar" class="sidebar d-flex flex-column">
         <div class="p-3">
             <h3 class="username ctm-text-title"></h3>
@@ -108,7 +108,7 @@
             </ul>
         </div>
     </div>
-    <!-- main content -->
+   
     <div class="content">
         <main class="container-fluid mt-3">
             <div class="row">
@@ -219,4 +219,4 @@
         });
     </script>
 </body>
-</html>
+</html> -->
