--- a/frontend/service/home.html
+++ b/frontend/service/home.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="chat/style.css">
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="components/chat/styles.css">
     <script>
         /*         if (!localStorage.getItem('authToken')) { // If the user is not logged in
                   window.location.href = '/login.html'; // Redirect to the login page
@@ -84,7 +84,7 @@
             <button id="sidebarToggle" class="toggle-btn me-2">
                 <i class="bi bi-list"></i>
             </button>
-            <span class="navbar-brand" id="pong">PONG</span>
+            <span class="navbar-brand">PONG</span>
             <div class="d-flex ms-auto align-items-center">
                 <div id="welcomeButton" class="username">welcome </div>
             </div>
@@ -98,10 +98,10 @@
                 <li class="nav-item"><a href="#" class="nav-link ctm-link">My Profile</a></li>
                 <li class="nav-item"><a href="#" class="nav-link ctm-link">Friends</a></li>
                 <li class="nav-item"><a href="#" class="nav-link ctm-link">Game Stats</a></li>
-                <li class="nav-item"><a href="#" class="nav-link ctm-link">Whenever</a></li>
+                <!-- <li class="nav-item"><a href="#" class="nav-link ctm-link">Whenever</a></li>
                 <li class="nav-item"><a href="#" class="nav-link ctm-link">Wherever</a></li>
                 <li class="nav-item"><a href="#" class="nav-link ctm-link">Were meant</a></li>
-                <li class="nav-item"><a href="#" class="nav-link ctm-link">to be together</a></li>
+                <li class="nav-item"><a href="#" class="nav-link ctm-link">to be together</a></li> -->
             </ul>
         </div>
         <div class="mt-auto p-3">
@@ -150,7 +150,7 @@
                             <div class="ctm-card card-hover h-100">
                                 <div class="card-body text-center">
                                     <h3 class="ctm-text-title mb-3">Play Chess</h3>
-                                    <img src="https://media.tenor.com/2gyJVMt_L6wAAAAM/pong-video-game.gif" alt="Pong Game" class="img-fluid rounded mb-3">
+                                    <img src="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/PedroPinhata/phpNtZwIg.png" alt="Pong Game" class="img-fluid rounded mb-3 h-75">
                                     <p class="ctm-text-light">Click to start a game of Chess!</p>
                                 </div>
                             </div>
@@ -368,7 +368,7 @@
         });
         </script>
     <script src="app/render.js"></script>
-    <script src="chat/app.js" defer></script>
-    <script src="neon.js" defer></script>
+    <script src="components/chat/app.js" defer></script>
+    <script src="app/neon.js" defer></script>
 </body>
 </html>
