--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -5,20 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>introduzca pin</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
-    <link rel="stylesheet" href="style.css">
-	<style>
-        .gif-ctm {
-            height: 50vh;
-            border-radius: 10px;
-        }
-		.cont {
-	    justify-content: center;
-    	height: calc(100vh - 50px);
-		}
-	</style>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-	<!-- navbar -->
+    <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark ctm-navbar p-1">
 		<span class="navbar-brand ms-2" id="pong">PONG</span>
 		<div class="d-flex ms-auto align-items-center">
@@ -27,15 +17,14 @@
 			<a class="nav-link ctm-link" href="register.html">Sign up</a>
         </div>
     </nav>
-	<main class="cont d-flex flex-column align-items-center">
-		<h3 class="text-center ctm-text-light mb-5" id="neon-text">please, log in to start playing</h3>
-		<!-- gif -->
-			<div class="text-center mt-5 neon-frame">
-				<img src="https://media.tenor.com/2gyJVMt_L6wAAAAM/pong-video-game.gif" alt="Loading GIF" class="img-fluid gif-ctm">
-			</div>
-		</div>
-	</main>
-	<script src="neon.js"></script>
+    <main class="d-flex flex-column align-items-center justify-content-center" style="height: calc(100vh - 50px);">
+        <h3 class="text-center ctm-text-light mb-5" id="neon-text">please, log in to start playing</h3>
+        <!-- gif -->
+        <div class="text-center mt-5 neon-frame" style="height: 50vh;">
+            <img src="https://media.tenor.com/2gyJVMt_L6wAAAAM/pong-video-game.gif" alt="Loading GIF" class="img-fluid h-100 rounded">
+        </div>
+    </main>
+    <script src="app/neon.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
