--- a/frontend/service/register.html
+++ b/frontend/service/register.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">    
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <!-- navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark ctm-navbar p-1">
-    <span class="navbar-brand ms-2" id="pong">PONG</span>
+    <span class="navbar-brand ms-2">PONG</span>
     <div class="d-flex ms-auto align-items-center">
       <a class="nav-link ctm-link" href="index.html">Home</a>
     </div>
@@ -67,8 +66,8 @@
       </div>
     </div>
   </div>
-    <script src="neon.js"></script>
-    <script src="register.js"></script>
+    <script src="app/neon.js"></script>
+    <script src="app/register.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
