--- a/frontend/service/home.html
+++ b/frontend/service/home.html
@@ -15,11 +15,7 @@
         /*         if (!localStorage.getItem('authToken')) { // If the user is not logged in
                   window.location.href = '/login.html'; // Redirect to the login page
                 } */
-    </script> 
-    <style>
-
-
-    </style>     
+    </script>  
 </head>
 <body>
     <!-- navbar -->
@@ -37,8 +33,8 @@
     <!-- sidebar -->
     <div id="sidebar-container"></div>
     <!-- main content -->
-    <div class="main-content">
-        <main class="container-fluid mt-3">
+    <div class="main-content mt-5">
+        <main class="container-fluid">
             <div id="chose-game" style="display: block;">
                 <div class="row">
                     <div class="col-12 mb-4">
@@ -111,9 +107,9 @@
    <!--  <script src="app/auth.js"></script> -->
    <script src="app/render.js"></script>
    <script src="app/home.js"></script>
-    <script src="components/chat/app.js" defer></script>
-    <script src="components/sidebar/app.js" defer></script>
-    <script src="app/neon.js" defer></script>
+   <script src="components/chat/app.js" defer></script>
+   <script src="components/sidebar/app.js" defer></script>
+   <script src="app/neon.js" defer></script>
 
 </body>
 </html>
