--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -17,11 +17,13 @@
 			<a class="nav-link ctm-link" href="register.html">Sign up</a>
         </div>
     </nav>
-    <main class="d-flex flex-column align-items-center justify-content-center" style="height: calc(100vh - 50px);">
+    <main class="vertical-wrap">
+    <div class="d-flex flex-column align-items-center justify-content-center">
         <h3 class="text-center ctm-text-light mb-5" id="neon-text">please, log in to start playing</h3>
         <!-- gif -->
-        <div class="text-center mt-5 neon-frame" style="height: 50vh;">
-            <img src="https://media.tenor.com/2gyJVMt_L6wAAAAM/pong-video-game.gif" alt="Loading GIF" class="img-fluid h-100 rounded">
+            <div class="text-center mt-5 neon-frame" style="height: 50vh;">
+                <img src="https://media.tenor.com/2gyJVMt_L6wAAAAM/pong-video-game.gif" alt="Loading GIF" class="img-fluid h-100 rounded">
+            </div>
         </div>
     </main>
     <script src="app/neon.js"></script>
