--- a/frontend/service/profile.html
+++ b/frontend/service/profile.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ctm-navbar p-1">
-        <span class="navbar-brand ms-2" PONG</span>
+        <span class="navbar-brand ms-2">PONG</span>
         <div class="d-flex ms-auto align-items-center">
             <a class="nav-link ctm-link" href="index.html">Home</a>
         </div>
     </nav>
-    <div id="profile-section" class="container mt-5 blinking-neon-frame">
+    <section id="profile-section" class="container mt-5 blinking-neon-frame">
         <div id="profile-card" class="ctm-card position-relative">
             <h2 class="text-center ctm-text-title">My profile</h2>
             <div class="d-flex justify-content-center">
@@ -35,8 +35,8 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div id="customize-section" class="container mt-5 blinking-neon-frame" style="display: none;">
+    </section>
+    <section id="customize-section" class="container mt-5 blinking-neon-frame" style="display: none;">
         <div id="customize-photo" class="ctm-card position-relative">
             <h2 class="text-center ctm-text-title">Customize profile photo</h2>
             <div class="d-flex justify-content-center">
@@ -53,9 +53,6 @@
                                 <div class="carousel-item">
                                     <canvas id="avatarCanvas3" class="d-block profile-picture" alt="Avatar 3"></canvas>
                                 </div>
-                                <!-- <div class="carousel-item">
-                                    <img id="uploadedImage" class="d-block profile-picture" alt="Uploaded Image">
-                                </div> -->
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carousel-container" data-bs-slide="prev">
                                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -85,10 +82,10 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
     <script src="app/neon.js"></script>
     <script src="app/profile.js"></script>
-    <script src="app/render.js"></script>  <!-- eventually I will render chat and sidebar so -->
+    <script src="app/render.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
