--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -66,6 +66,7 @@
     <!-- scripts -->
     <!-- <script type="module" src="app/render.js"></script> -->
     <!-- <script type="module" src="app/neon.js"></script> -->
+    <script type="module" src="app/auth.js"></script>
     <script type="module" src="app/router.js"></script>
     <script type="module" src="components/chat/app.js"></script>
     <script type="module" src="components/sidebar/app.js"></script>
