some advances on friends page

--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -50,7 +50,7 @@
         <!-- sidebar -->
     <div id="sidebar-container" style="display: none;"></div>
     <!-- main content -->
-    <main id="app" class="vertical-wrap">
+    <main id="app">
         <!-- Dynamic content will be loaded here -->
     </main>
     <!-- chat -->
@@ -58,7 +58,7 @@
     <!-- scripts -->
     <!-- <script type="module" src="app/render.js"></script> -->
     <!-- <script type="module" src="app/neon.js"></script> -->
-    <script type="module" src="app/auth.js"></script>
+    <!-- <script type="module" src="app/auth.js"></script> -->
     <script type="module" src="app/router.js"></script>
     <script type="module" src="components/chat/app.js"></script>
     <script type="module" src="components/sidebar/app.js"></script>
