piece style change full done

--- a/chess_game/index.html
+++ b/chess_game/index.html
@@ -42,9 +42,9 @@
     <div class="option">
       <label for="piece-style">Piece Style:</label>
       <select id="piece-style">
-        <option value="Neo">Modern</option>
+        <option value="Modern">Modern</option>
         <option value="Classic">Classic</option>
-        <option value="Fantasy">Fantasy</option>
+        <option value="Club">Club</option>
       </select>
     </div>
     <div class="option">
