hardcoded game-stats ready

--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./components/start-game/styles.css">
     <link rel="stylesheet" href="./components/profile/styles.css">
     <link rel="stylesheet" href="./components/friends/styles.css">
+    <link rel="stylesheet" href="./components/stats/styles.css">
 </head>
 <body>
     <!-- navbar -->
