I've missed some files on tournaments

--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./components/profile/styles.css">
     <link rel="stylesheet" href="./components/friends/styles.css">
     <link rel="stylesheet" href="./components/stats/styles.css">
+    <link rel="stylesheet" href="./components/tournament/styles.css">
 </head>
 <body>
     <!-- navbar -->
