--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./components/index/styles.css">
     <link rel="stylesheet" href="./components/chat/styles.css">
     <link rel="stylesheet" href="./components/sidebar/styles.css">
     <link rel="stylesheet" href="./components/start-game/styles.css">
@@ -25,7 +26,7 @@
             <button id="sidebar-toggle-container" class="toggle-btn me-2" style="display: none;">
                 <i id="sidebar-toggle" class="bi bi-list"></i>
             </button>
-            <span class="navbar-brand" id="pong">PONG</span>
+            <span class="navbar-brand" id="pong">P1N6</span>
             <div id="navbar-content" class="d-flex ms-auto align-items-center">
                 <a href="/login" class="nav-link ctm-link" data-link>Log in</a>
                 <span class="divider mx-2 ctm-text-light">|</span>
