still  with settings page

--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./components/profile/styles.css">
     <link rel="stylesheet" href="./components/friends/styles.css">
     <link rel="stylesheet" href="./components/stats/styles.css">
+    <link rel="stylesheet" href="./components/settings/styles.css">
     <link rel="stylesheet" href="./components/tournament/styles.css">
     <link rel="stylesheet" href="./components/chess/styles.css">
 </head>
