2FA button is actually functional?

--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -27,7 +27,7 @@
             <button id="sidebar-toggle-container" class="toggle-btn me-2" style="display: none;">
                 <i id="sidebar-toggle" class="bi bi-list"></i>
             </button>
-            <span class="navbar-brand" id="pong">P.U.F.</span>
+            <span class="navbar-brand" id="pong">P.L1.F.</span>
             <div id="navbar-content" class="d-flex ms-auto align-items-center">
                 <a href="/login" class="nav-link ctm-link" data-link="true">Log in</a>
                 <span class="divider mx-2 ctm-text-light">|</span>
