provisional email verification page done

--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -37,7 +37,10 @@
     </nav>
     <div id="sidebar-container" style="display: none;"></div>
     <!-- main content -->
-    <main id="app">
+     <div class="d-flex">
+
+         <main id="app">
+    </div>
         <!-- Dynamic content will be loaded here -->
     </main>
     <!-- chat -->
