--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -48,6 +48,7 @@
     <!-- scripts --> 
     <!-- <script type="module" src="app/render.js"></script> -->
     <!-- <script type="module" src="app/neon.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <script type="module" src="app/router.js"></script>
     <script type="module" src="app/auth.js"></script>
     <script type="module" src="components/chat/app.js"></script>
