--- a/frontend/service/index.html
+++ b/frontend/service/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./components/settings/styles.css">
     <link rel="stylesheet" href="./components/tournament/styles.css">
     <link rel="stylesheet" href="./components/chess/styles.css">
+    <link rel="stylesheet" href="./components/pong/styles.css">
 </head>
 <body>
     <!-- navbar -->
